# lungair-web-application

./: .env  .gitmodules  README.md  custom-app.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: README.md
customizeUtils/: common.js
customizeUtils/vite/: baseConfig.ts  rollup-plugin-override-resolver.ts
lungair/: README.md  index.html  orthanc-docker-quickstart.md  vite.config.ts
lungair/fhir-login/: launch.html
lungair/fhir-sandbox-config/: lungair_data_source.json  lungair_data_source.py  synthetic_data_generation_parameters.json
lungair/orthanc-proxy/: index.html  package-lock.json  package.json  vite.config.js
lungair/python/: lungair_methods.py
lungair/server/: README.md  lungair_methods.py  lungair_seg_inference.py  pyproject.toml
lungair/src/: config.ts  global.d.ts
lungair/src/components/: AboutBox.vue  AnalyticsView.vue  App.vue  AppBar.vue  ChartView.vue  ControlsStrip.vue  EHRDataBrowser.vue  LayoutGrid.vue  LocalFHIR.vue  LocalFHIRSettings.vue  LungairServerModule.vue  ModulePanel.vue  RemoteFHIR.vue  ServerModule.vue  Settings.vue
lungair/src/components/dicom-web/: PatientDetails.vue  StudyVolumeDicomWeb.vue
lungair/src/core/: dicom-web-api.ts
lungair/src/store/: local-fhir-store.ts
lungair/src/types/: views.ts
src/: config.ts
src/components/: App.vue  LayoutGrid.vue  ModulePanel.vue  Settings.vue
src/core/: dicom-web-api.ts
src/io/state-file/: schema.ts
src/store/: data-browser.ts
src/store/dicom-web/: dicom-web-store.ts
src/types/: views.ts
(+5 files in other folders)
